2023-10-02T16:16:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6382713049 # 1951
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-02
* notice: last 14d: unq all: 19 59
* notice: prev accum: outdated-unq outdated-all / unq all: 1203 2990 / 1237 3047
* notice: next accum: outdated-unq outdated-all / unq all: 1203 2990 / 1241 3053
* notice: prev exec diff / last date diff / accum: unq all: +4 +6 -3 -3 / +5 +7 -0 -0 / 5 7
* notice: removed / changed dates: [] / [2023-09-18 2023-10-02]

2023-10-02T08:16:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6377646205 # 1950
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-02
* notice: last 14d: unq all: 17 56
* notice: prev accum: outdated-unq outdated-all / unq all: 1203 2990 / 1236 3046
* notice: next accum: outdated-unq outdated-all / unq all: 1203 2990 / 1237 3047
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-18 2023-10-02]

2023-10-02T00:57:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6374616033 # 1949
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-02
* notice: last 14d: unq all: 17 56
* notice: prev accum: outdated-unq outdated-all / unq all: 1194 2971 / 1236 3046
* notice: next accum: outdated-unq outdated-all / unq all: 1203 2990 / 1236 3046
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-17] / []

2023-10-01T16:14:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6371849684 # 1948