@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-02T16:16:33Z",
-  "count_outdated" : 2990,
-  "uniques_outdated" : 1203,
+  "timestamp" : "2023-10-03T00:57:55Z",
+  "count_outdated" : 2995,
+  "uniques_outdated" : 1207,
   "count" : 3053,
   "uniques" : 1241,
   "clones" : [
-    {
-      "timestamp": "2023-09-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 5 ],
-      "count_decinc": [ 4, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 3, 4 ]
-    },
     {
       "timestamp": "2023-09-19T00:00:00Z",
       "count": 4,
