@@ -1,12 +1,7 @@
 {
-  "count": 59,
+  "count": 58,
   "uniques": 19,
   "clones": [
-    {
-      "timestamp": "2023-09-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-19T00:00:00Z",
       "count": 4,
